@@ -6,6 +6,7 @@ Revision history for Perl module Chatbot::Eliza
     - Moved all example scripts into examples/ directory
     - Added a minimal test that actually exercises Eliza with a script
     - Added "use warnings" and dropped use vars in favour of 'our'
+    - Added COPYRIGHT AND LICENSE section to pod
     - Switched to Dist::Zilla
 
 1.04 2003-01-24
